--- a/Code/Shintaku_ENV872_Project.tex
+++ b/Code/Shintaku_ENV872_Project.tex
@@ -25,7 +25,7 @@
 \usepackage[margin=2.54cm]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={Predictors of Lake Level Changes in Lake Tahoe, CA},
+            pdftitle={Trend Analysis and Predictors of Lake Level Changes in Lake Tahoe, CA},
             pdfauthor={Nikki Shintaku},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -76,7 +76,7 @@
 
 \setlength{\droptitle}{-2em}
 
-  \title{Predictors of Lake Level Changes in Lake Tahoe, CA}
+  \title{Trend Analysis and Predictors of Lake Level Changes in Lake Tahoe, CA}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
   \subtitle{\url{https://github.com/nmshintaku/Data_Analytics_final_project}}
@@ -98,6 +98,12 @@
 \begin{document}
 \maketitle
 
+\begin{figure}
+\centering
+\includegraphics{Tahoe.png}
+\caption{Lake Tahoe, CA}
+\end{figure}
+
 \newpage
 \tableofcontents 
 \newpage
@@ -111,14 +117,14 @@
 Questions}\label{rationale-and-research-questions}}
 
 Lake Tahoe measures at 6,220 feet above sea level, and is 22 miles long
-and 12 miles long spanning across the California-Nevada state border.
-Lake Tahoe water is 99.994\% pure contributing its legendary, beautiful
-water clarity. However, Lake Tahoe is facing decline of water clarity
-and health from the impacts of climate change, invasive species, and
-pollution. Climate change is causing more precipitation to fall as rain
-rather than snow, which leads to increase stormwater runoff carrying
-sediment into Lake Tahoe. In addition, California is experiencing
-extended droughts affecting amount of annual precipitation.
+and 12 miles wide spanning across the California-Nevada state border.
+Lake Tahoe water is 99.994\% pure contributing to its legendary and
+beautiful water clarity. However, Lake Tahoe is facing decline of water
+clarity and health from the impacts of climate change, invasive species,
+and pollution. Climate change is causing more precipitation to fall as
+rain rather than snow, which leads to increase stormwater runoff
+carrying sediment into Lake Tahoe. In addition, California is
+experiencing extended droughts affecting amount of annual precipitation.
 Inadvertently, climate change is also increasing the lake's water
 temperature and affecting regional weather patterns that could change
 the lake's ecosystem. Snowmelt from 63 tributaries in the watershed adds
@@ -171,7 +177,7 @@ the Nation website at \url{https://waterdata.usgs.gov/nwis/qw}. The
 dataset contains daily gage height measurements in feet from January
 1920 - December 2019 from one station (Site \#103370000) in Tahoe City,
 CA. USGS reports that gage height is measured from the recorded lake
-elevation of 6,220 ft as the zero basline. Gage height measurement +
+elevation of 6,220 ft as the zero baseline. Gage height measurement +
 current lake elevation (6,220 ft) will give the actual lake level from
 sea level.
 
@@ -262,13 +268,13 @@ minimum and maximum daily temperatures.
 \section{Exploratory Analysis}\label{exploratory-analysis}}
 
 To visualize what all the data looks like across time, each variable was
-plotted side by side using the original dates provided. Figure 1 shows
+plotted side by side using the original dates provided. Figure 2 shows
 the six variables that the analysis is investigating. It is clear in
 Graph A that gage height measurements are available beginning in the
 late 1950s to present. The gage height data indicates an oscillation
 pattern from high lake level to low lake level throughout the years. The
 NOAA climate data is graphed starting from the early 1900s, and there
-are clear some data gaps in precipitation (Graph B) and snow depth
+are some clear data gaps in precipitation (Graph B) and snow depth
 (Graph D). Graph E and F represent the daily temperatures in degrees
 celsisus with the red color symbolizing positive temperatures and the
 blue color symbolizing negative temperatures. Out of the NOAA climate
@@ -282,7 +288,7 @@ data, there is no comprehensible pattern throughout the time period.
 
 Because this analysis is looking at predictors of gage height (or lake
 level), the NOAA climate data was cut to match the same dates as the
-USGS data for 1957 - 2019. Figure 2 shows the distribution of the six
+USGS data for 1957 - 2019. Figure 3 shows the distribution of the six
 variables across those years. Again, out of the NOAA climate data, there
 is no comprehensible pattern throughout the time period.
 
@@ -300,13 +306,13 @@ is no comprehensible pattern throughout the time period.
 
 A frequency polygon graph was created to view how many observations
 occurred for each measurement divided among 50 bins on the x-axis.
-Figure 3 shows that precipitation, snow, and snow depth had the highest
-observations with measurements closest to 0. Minimum temperature ranged
-from 30-40 being the observations, and maximum temperature ranged from
-40-80. Gage height topped around a measurement of 7-10. This frequency
-polygons graph is useful to compare each of our variables to each other
-and gives a good overview of where the majority of the measurements
-lies.
+Figure 4 shows that precipitation, snow, and snow depth had the highest
+observations with measurements closest to 0. Minimum temperatures ranged
+from 30-40 degrees F being the most observations, and maximum
+temperatures ranged from 40-80 degrees F. Gage height topped count
+around a measurement of 7-10. This frequency polygons graph is useful to
+compare each of our variables to each other and gives a good overview of
+where the majority of the measurements lies.
 
 \newpage
 
@@ -348,8 +354,8 @@ Times series are made up of several components:
 \end{itemize}
 
 Lake water level (gage height) is measured daily at the Tahoe City gage
-station. Since we are working with one location measured over time, this
-is a great dataset for time series analysis.
+station. Since the data is one location measured over time, this is a
+great dataset for time series analysis.
 
 \begin{figure}
 \centering
@@ -357,7 +363,7 @@ is a great dataset for time series analysis.
 \caption{Lake Tahoe Gage Height Time Series Decomposed}
 \end{figure}
 
-Figure 4 shows the decomposed components of the time series for gage
+Figure 5 shows the decomposed components of the time series for gage
 height. The grey boxes on the right show the relative size of the y axis
 data to each other. The data component is the result of the seasonal
 component plus the trend component, and the remainder is left over data
@@ -376,24 +382,24 @@ extracted from 365 days and represents a repeated cycle.
 \caption{Seasonal Component Against Actual Data}
 \end{figure}
 
-Figures 5 and 6 shows the trend and seasonal decomposed components
+Figures 6 and 7 shows the trend and seasonal decomposed components
 against the original gage height data. The decomposition is not
-constrained by a lower bound of zero, which is why Figure 5 shows the
+constrained by a lower bound of zero, which is why Figure 7 shows the
 seasonal component going below zero. In this case, the gage height could
 go below zero because its baseline is lake elevation at 6,220 ft. If
 gage height were to go below zero, it would likely imply a drought.
 
 For trend analysis, this study considers a monotonic trend. Monotonic
 trends are a gradual shift over time that is consistent in direction,
-for example in response to climate change. This monotonic analysis uses
-a Seasonal Mann-Kendall test. \textbf{Seasonal Mann-Kendall} assumes
-seasonality, non-parametric, no temporal autocorelation, and identical
-distribution.
+for example in response to climate change. The monotonic analysis in
+this study uses a Seasonal Mann-Kendall test. \textbf{Seasonal
+Mann-Kendall} assumes seasonality, non-parametric, no temporal
+autocorelation, and identical distribution.
 
 We are interested in knowing how lake level has changed over time while
 incorporating the seasonal component. The Seasonal Mann-Kendall assumes
 no temporal autocorrelation, but daily data is prone to temporal
-autocorrelation. In this case,the data is collaspoed down into monthly
+autocorrelation. In this case,the data is collasped down into monthly
 data to (1) reduce temporal autocorrelation and (2) break down the
 potential seasonal trend into more interpretable components. Monthly
 mean gage height was calculated for this test.
@@ -411,21 +417,200 @@ indicates a decreasing trend over time of -0.0021 as shown on Figure 7
 \caption{Monthly Mean Gage Height Data with Sen's Slope Trend}
 \end{figure}
 
-\hypertarget{question-2}{%
-\subsection{Question 2:}\label{question-2}}
+Pettitt's test was run on the Tahoe gage height monthly time series to
+detect change points in lake levels over time as shown in Figure 9. The
+first change point occurred most likely around 1987 and the second
+change point occurring in 1992. In between Change Point 1 and Change
+Point 2, the gage height is the lowest its ever been in displayed time
+period; this likely corresponds to the 1987-1992 drought in California
+that lasted six years. In addition, there was a five year drought from
+2012-2016, which likely corresponds to Change Point 4 when the drought
+ends.
+
+\begin{figure}
+\centering
+\includegraphics{Shintaku_ENV872_Project_files/figure-latex/unnamed-chunk-12-1.pdf}
+\caption{Change points in lake level}
+\end{figure}
+
+\hypertarget{question-2-what-are-significant-atmospheric-predictors-of-lake-level-in-lake-tahoe}{%
+\subsection{Question 2: What are significant atmospheric predictors of
+lake level in Lake
+Tahoe?}\label{question-2-what-are-significant-atmospheric-predictors-of-lake-level-in-lake-tahoe}}
+
+In order to find significant atmospheric predictors of lake level,
+generalized linear modeling (GLM) was used through linear regression. A
+linear regression is formed of a continuous response variable plus a
+combination of 1+ continuous response variables (and the error term).
+The equation is an algebraic expression:
+\[y = \alpha + \beta*x + \epsilon \]
+
+The goal of linear regression is to find the line of best fit that
+minimizes the total distance of points from the line. With GLM comes
+some assumptions:
+
+\begin{itemize}
+\tightlist
+\item
+  Data resisduals approximate a normal distribution
+\item
+  Variance in response variable is equal among groups (for analyzing
+  categorical explanatory variables)
+\end{itemize}
+
+This investigation computes both simple linear regression and multiple
+linear regression.
+
+\hypertarget{simple-linear-regression}{%
+\subsubsection{Simple Linear
+Regression}\label{simple-linear-regression}}
+
+\textbf{Single Linear Regression} is with a continuous response and one
+continuous explanatory variable. Simple linear regressions were run on
+each of the five climate variables to test if a single variable is a
+signficant predictor of lake level. For the purpose of this study, only
+the two best models will be presented and analyzed.
+
+\hypertarget{daily-minimum-temperature-as-a-significant-predictor}{%
+\paragraph{Daily Minimum Temperature as a Significant
+Predictor}\label{daily-minimum-temperature-as-a-significant-predictor}}
+
+Can we predict lake level from minimum temperature? After running the
+simple linear regression, minimum temperature is a significant predictor
+of lake level (Simple Linear Regression, df = 22732, p-value =
+\textless{} 2.2e-16, R2 = 0.025). For every 1 degree F increase in
+minimum temperature, there is an increase in gage height by 0.032 ft,
+and minimum temperature accounts for 2.5\% of the variance in lake
+level. There is a significant positive correlation between minimum
+temperautre and lake level (Correlation, df = 22732, p-value = 2.2e-16,
+cor = 0.159). Figure 10 shows minimum temperature by gage height with
+the linear regression trend line in black.
+
+\[Gage Height = 4.87 + 0.032*Tmin \]
+
+\begin{figure}
+\centering
+\includegraphics{Shintaku_ENV872_Project_files/figure-latex/unnamed-chunk-13-1.pdf}
+\caption{Minimum temperature by gage height with trend line in black}
+\end{figure}
+
+\hypertarget{daily-maximum-temperature-as-a-significant-predictor}{%
+\paragraph{Daily Maximum Temperature as a Significant
+Predictor}\label{daily-maximum-temperature-as-a-significant-predictor}}
+
+Can we predict lake level from maximum temperature? Maximum temperature
+is also a significant predictor of lake level (Simple Linear Regression,
+df = 22732, p-value = 2.2e-16, R2 = 0.011). For every 1 degree F
+increase in maximum temperature, there is an increse in gage height by
+0.014 ft, and maximum temperature accounts for 1.1\% of variance in lake
+level. There is a significnat positive correlation between maximum
+temperautre and lake level (Correlation, df = 22732, p-value = 2.2e-16,
+cor = 0.105). Figure 11 shows maximum temperature by gage height with
+the linear regression trend line in black.
+
+\[Gage Height = 5.042 + 0.014*Tmax \]
+
+\begin{figure}
+\centering
+\includegraphics{Shintaku_ENV872_Project_files/figure-latex/unnamed-chunk-14-1.pdf}
+\caption{Maximum temperature by gage height with trend line in black}
+\end{figure}
+
+\hypertarget{multiple-linear-regression}{%
+\subsubsection{Multiple Linear
+Regression}\label{multiple-linear-regression}}
+
+\textbf{Multiple Linear Regression} is with a continuous response and
+two or more continuous explanatory variables. Multiple linear regression
+models were run on various combinations of the five climate variables.
+However, with choosing variables yourself, it is possible to
+over-parameterize a linear model so an Akaike's Information Criterion
+(AIC) step regression was performed to find which explanatory variables
+will predict the best gage height. Potential explanatory variables from
+the dataset include precipitation, snowfall, snow depth, minimum
+temperature, and maximum temperature.
+
+\hypertarget{precipitation-snow-fall-and-minimum-temperature-as-significant-predictors}{%
+\paragraph{Precipitation, Snow Fall, and Minimum Temperature as
+Significant
+Predictors}\label{precipitation-snow-fall-and-minimum-temperature-as-significant-predictors}}
+
+A multiple linear regression was run on the variables precipiation,
+minimum temperature, and snowfall indicating that all of the predictor
+variables are significantly related to gage height (Multiple Linear
+Regression, df = 22730, p-value = 2.2e-16, R2 = 0.026). For every 1 inch
+increase in precipiation, there is a -0.14 ft decrease in gage height,
+holding all other variables fixed. For every 1 degree F increase in
+minimum temperature, there is a 0.033 ft increase in gage height,
+holding all other variables fixed. Lastly, for every 1 inch increase in
+snowfall, there is a 0.036 ft increase in gage height, holding all other
+variables fixed. The adjusted R2 is 0.026 meaning that 2.6\% of the
+variance in the measure of gage height can be predicted by
+precipitation, minimum temperature, and snowfall.
+
+\[GageHeight = 4.833 - 0.14*precipitation + 0.033*Tmin + 0.036*Snow   \]
+
+\hypertarget{akaikes-information-criterion-step-regression}{%
+\paragraph{Akaike's Information Criterion Step
+Regression}\label{akaikes-information-criterion-step-regression}}
+
+Akaike's Information Criterion (AIC) step regression was performed to
+find which explanatory variables will predict the best gage height, and
+the chosen model with the lowest AIC (34161) resulted in precipitation,
+snow depth, maximum temperature, and minimum temperature being all
+highly significant predictors of gage height (AIC, mutiple linear
+regression, df = 22729, p-value = 2.2e-16, R2 = 0.038). For every 1 inch
+increase in precipiation, there is a -0.31 ft decrease in gage height,
+holding all other variables fixed. For every 1 inch increase in snow
+depth, there is a 0.015 ft increase in gage height, holding all other
+variables fixed. For every 1 degree F increase in minimum temperature,
+there is a 0.067 ft increase in gage height, holding all other variables
+fixed. Lastly, for every 1 degree F increase in maximum temperature,
+there is a 0.021 ft decrease in gage height, holding all other variables
+fixed. The adjusted R2 is 0.038 meaning that 3.8\% of the variance in
+the measure of gage height can be predicted by precipitation, minimum
+temperature, maximum temperature, and snow depth.
+
+\[GageHeight = 4.86 - 0.31*precipitation + 0.015*snowdepth - 0.021*Tmax + 0.067*Tmin   \]
 
 \newpage
 
 \hypertarget{summary-and-conclusions}{%
 \section{Summary and Conclusions}\label{summary-and-conclusions}}
 
-\newpage
+Overall, this analysis led to a lot of valuable findings in how Lake
+Tahoe's water level is changing over the years and what atmospheric
+predictors play a key role in determining the water level. Using a time
+series analysis, it was determined that there is a significant
+decreasing trend over the time period of 1957-2019. Pettitt's change
+detection test found four change points. Change point 1, 2, and 4 can be
+traced back to specific drought events in California that may explain
+why the lake level is drastically changing at those points. Droughts are
+prolonged periods of low rainfall leading to shortages in water. With
+precipitation and snowfall being the main contributors to lake level,
+drought years would undoubtfully have adverse affects on lake level.
+Climate change is intensifying droughts in California, which would then
+impact atomspheric conditions and level of lake water.
 
-\hypertarget{references}{%
-\section{References}\label{references}}
+After running through simple linear regression and multiple linear
+regression methods, the highly significant climate predictors of lake
+level are precipitation, snow depth, maximum daily temperature, and
+minimum daily temperature. These results are taken from Akaike's
+Information Criterion that returns the model with the lowest AIC and
+best explanatory variables. These variables come at no surprise as
+precipitation falls directly into the lake, and snow depth corresponds
+to snow melt that flows into the lake. Daily min and max temperatures
+also relate to weather events that cause precipitation and snow. It is
+important to understand these drivers of lake level to protect Tahoe's
+surrounding ecosystem in the face of climate change as well as monitor
+the legal water level limit.
 
-\textless{}add references here if relevant, otherwise delete this
-section\textgreater{}
+This preliminary study provides a baseline for further research in
+understanding how atomspheric factors play a role in Lake Tahoe's
+overall ecosystem. Further analysis could explore variables such as,
+water quality, water clarity, nutrients levels, water temperature, and
+algal biomass. There are a lot more factors to consider than just
+climate when quantifying a trend in lake level.
 
 
 \end{document}
